Add API for change public status for category
